# caster_desktop

./: LICENSE  README.md
caster_desktop/: package.xml
caster_gazebo/: CMakeLists.txt  package.xml
caster_gazebo/controllers/: control.yaml
caster_gazebo/launch/: caster_body.launch  caster_home.launch
caster_gazebo/models/caster_docker/: model.config  model.sdf
caster_gazebo/models/caster_docker/materials/scripts/: course.material
caster_gazebo/models/object1/: model.sdf
caster_gazebo/models/object1/meshes/: object.STL.dae
caster_gazebo/models/object_marker/: model (copy).sdf  model.config  model.sdf
caster_gazebo/models/object_marker/materials/scripts/: object.material
caster_gazebo/models/object_marker/meshes/: object.STL
caster_gazebo/worlds/: caster_home.world
caster_teleop/: CMakeLists.txt
caster_teleop/config/: joy_teleop.yaml
caster_viz/: CMakeLists.txt  package.xml
caster_viz/launch/: display.launch
caster_viz/viz/: model.rviz  view.rviz
